@@ -1,3 +1,9 @@
+2001-07-28  Michael Meeks  <michael@ximian.com>
+
+	* tests/Makefile.am: install test-moniker.
+
+	* tests/test-moniker.c: add POPT_AUTOHELP
+
 2001-07-27  Michael Meeks  <michael@ximian.com>
 
 	* bonobo/bonobo-control.c (window_id_demangle): rename to
